# teams-ai-python-env

./: .gitignore  .python-env  .venv  Manage-PythonEnvConfig.txt  README.md  aliases.ps1  cli.spec  config.ps1  debug_load.py  env.ps1  gemini.md  gemini.txt  install.sh  manage_git.sh  menu.ps1  mkdocs.yml  output.txt  output2.txt  output3.txt  package-lock.json  package.json  projets  ps - Copie.ps1  requirements.txt  restore_generic.sh  restore_project.sh  run.ps1  temp_debug_commit.py  temp_debug_runner.py  test_agent_commit.txt  test_non_interactive_commit.txt  tmux-launch.sh  tmux_byobu_shortcuts.txt  wsl-env.sh
docs/: LOGGER.md  agent_capabilities.md  index.md  installation.md  ssh-manager-v3.md
git_tools/: __init__.py  cli.py  config.py  git_utils.py  logger.py  ssh_setup.py  workflows.py
logs/: execution_log.jsonl  execution_log_2025-08-09_10-00-00.jsonl  execution_log_2025-08-10_11-22-23.jsonl  execution_log_2025-08-10_11-23-59.jsonl
python_scripts/: config.py  git_commands.py  git_commands_temp.py  log_manager.py  main.py  ssh_setup.py  version.json
scripts/: _common.sh  (+15 more)
ssh/v3/: README.md  pyproject.toml  setup.py
ssh/v3/docs/: CLI.md  cicd.md
ssh/v3/docs/scripts/utils/: commit-push.md  documentation_scripts_git.md  init-repository.md  setup-git-ssh.md
ssh/v3/src/: run_sshkeys.sh
ssh/v3/src/sshkeys/: cli.py
ssh/v3/src/sshkeys/core/: config.py  formatter.py  ssh.py
ssh/v3/sshkeys/: cli.py
ssh/v3/sshkeys/core/: config.py  detect.py  known_hosts_migration.py  models.py  ssh.py
ssh/v3/tests/: test_config.py  test_known_hosts.py  test_ssh.py
(+71 files in other folders)
