[tool.poetry]
name = "sshkeys"
version = "0.1.0"
description = "Outil de gestion des clés SSH pour GitHub et serveurs"
authors = ["Votre Nom <votre@email.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
click = "^8.1.3"          # Pour le CLI
pydantic = "^1.10.7"      # Validation des données
pyyaml = "^6.0"            # Pour la gestion des fichiers de config (optionnel)

[tool.poetry.dev-dependencies]
pytest = "^7.2.0"
pytest-cov = "^4.0.0"
black = "^22.12.0"
isort = "^5.11.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[[tool.poetry.packages]]
include = "sshkeys"

[tool.poetry.scripts]
sshkeys = "sshkeys.cli:cli"
